package VojnushkaProto;

message GreetingProtoMsg {
  required int32 Id = 1;
}